--- a/Clientandroid/app/src/main/res/layout/activity_login.xml
+++ b/Clientandroid/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/login_buton_1"
+        android:id="@+id/login_button_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Log in to your Account"
@@ -52,7 +52,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.609"
         app:layout_constraintStart_toEndOf="@+id/login_button_3"
-        app:layout_constraintTop_toBottomOf="@+id/login_buton_1"
+        app:layout_constraintTop_toBottomOf="@+id/login_button_1"
         app:layout_constraintVertical_bias="0.239" />
 
     <Button
@@ -63,7 +63,7 @@
         android:text="Main  Activity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_buton_1"
+        app:layout_constraintTop_toBottomOf="@+id/login_button_1"
         app:layout_constraintVertical_bias="0.239" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
