--- a/Clientandroid/app/src/main/res/layout/activity_main.xml
+++ b/Clientandroid/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/main_receiver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
@@ -24,7 +24,7 @@
         android:text="Go to Login!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/main_receiver"
         app:layout_constraintVertical_bias="0.461" />
 
     <Button
@@ -36,7 +36,17 @@
         app:layout_constraintEnd_toStartOf="@+id/main_button_1"
         app:layout_constraintHorizontal_bias="0.262"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/main_receiver"
         app:layout_constraintVertical_bias="0.461" />
+
+    <Button
+        android:id="@+id/main_button_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="33dp"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_receiver" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
