Buttons 'android:backgroundTint' attribute changed to Our pallette Blue Saphire

--- a/Clientandroid/app/src/main/res/layout/activity_register.xml
+++ b/Clientandroid/app/src/main/res/layout/activity_register.xml
@@ -10,7 +10,8 @@
         android:id="@+id/register_button_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register for Free"
+        android:text="@string/register_button_1_text"
+        android:backgroundTint="@color/BlueSapphire"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +24,7 @@
         android:layout_height="wrap_content"
         android:width="234dp"
         android:ems="10"
-        android:hint="******"
+        android:hint="@string/register_password_hint"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +37,7 @@
         android:layout_marginTop="4dp"
         android:width="234dp"
         android:ems="10"
-        android:hint="Insert your Email"
+        android:hint="@string/register_email_hint"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +50,7 @@
         android:layout_marginTop="220dp"
         android:width="234dp"
         android:ems="10"
-        android:hint="Name"
+        android:hint="@string/register_name_hint"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +60,8 @@
         android:id="@+id/register_button_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Go Back to Login!"
+        android:text="@string/register_button_2_text"
+        android:backgroundTint="@color/BlueSapphire"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_button_1" />
@@ -68,7 +70,8 @@
         android:id="@+id/register_button_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Main Activity"
+        android:text="@string/register_button_3_text"
+        android:backgroundTint="@color/BlueSapphire"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_button_1" />
