--- a/Clientandroid/app/src/main/res/layout/activity_login.xml
+++ b/Clientandroid/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_height="59dp"
         android:layout_marginTop="164dp"
         android:ems="10"
-        android:hint="Introduce your Email"
+        android:hint="@string/login_email_hint"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -23,8 +23,9 @@
         android:id="@+id/login_button_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log in to your Account"
-        android:textColor="#212121"
+        android:backgroundTint="@color/BlueSapphire"
+        android:text="@string/login_button_1_text"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +38,7 @@
         android:layout_height="wrap_content"
         android:width="234dp"
         android:ems="10"
-        android:hint="******"
+        android:hint="@string/login_password_2_hint"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +48,8 @@
         android:id="@+id/login_button_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Go to Register"
+        android:text="@string/login_button_2_text"
+        android:backgroundTint="@color/BlueSapphire"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.609"
@@ -60,7 +62,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
-        android:text="Main  Activity"
+        android:text="@string/login_button_3_text"
+        android:backgroundTint="@color/BlueSapphire"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_button_1"
