--- a/Clientandroid/app/src/main/res/layout/activity_main.xml
+++ b/Clientandroid/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="44dp"
-        android:text="Go to Login!"
+        android:text="@string/main_button_1_text"
+        android:backgroundTint="@color/BlueSapphire"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_receiver"
@@ -31,7 +32,8 @@
         android:id="@+id/main_button_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Go to Register!"
+        android:text="@string/main_button_2_text"
+        android:backgroundTint="@color/BlueSapphire"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/main_button_1"
         app:layout_constraintHorizontal_bias="0.262"
@@ -44,7 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="33dp"
-        android:text="Button"
+        android:text="@string/main_button_3_text"
+        android:backgroundTint="@color/BlueSapphire"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_receiver" />
