--- a/Clientandroid/app/src/main/res/values/themes.xml
+++ b/Clientandroid/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Clientandroid" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Cristian" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/Turquoise</item>
-        <item name="colorPrimaryVariant">@color/BlueSapphire</item>
+        <item name="colorPrimaryVariant">@color/Turquoise</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
