Receiving products from the Backend, This version only shows image_1 and title (from response), Next Step is place all relevant information inside each product card

--- a/Clientandroid/app/src/main/res/layout/activity_main.xml
+++ b/Clientandroid/app/src/main/res/layout/activity_main.xml
@@ -52,4 +52,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_receiver" />
 
+    <Button
+        android:id="@+id/main_button_4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Go to ShopActivity"
+        app:layout_constraintBottom_toTopOf="@+id/main_button_2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
