--- a/Clientandroid/app/src/main/res/layout/item.xml
+++ b/Clientandroid/app/src/main/res/layout/item.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerInParent="true"
     android:layout_centerHorizontal="true"
@@ -17,49 +17,85 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="393dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/item_description"
-            android:layout_width="227dp"
-            android:layout_height="37dp"
-            android:layout_margin="3dp"
-            android:layout_marginStart="40dp"
-            android:paddingStart="35px"
-            android:textAlignment="center"
-            android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/item_image"
-            tools:layout_editor_absoluteY="10dp" />
-
-        <TextView
             android:id="@+id/item_title"
-            android:layout_width="221dp"
-            android:layout_height="86dp"
+            android:layout_width="215dp"
+            android:layout_height="50dp"
             android:layout_gravity="left"
             android:layout_margin="3dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginEnd="16dp"
             android:gravity="left"
             android:paddingStart="35px"
             android:paddingLeft="50px"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.45"
+            app:layout_constraintStart_toEndOf="@+id/item_image"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.038"
+            tools:visibility="visible"
+            />
+
+        <TextView
+            android:id="@+id/item_description"
+            android:layout_width="213dp"
+            android:layout_height="78dp"
+            android:layout_margin="3dp"
+            android:layout_marginTop="8dp"
+            android:paddingStart="35px"
             android:textAlignment="center"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.425"
+            app:layout_constraintHorizontal_bias="0.421"
             app:layout_constraintStart_toEndOf="@+id/item_image"
-            app:layout_constraintTop_toBottomOf="@+id/item_description"
-            app:layout_constraintVertical_bias="0.0"
-            tools:visibility="visible" />
+            app:layout_constraintTop_toBottomOf="@+id/item_title"
+            app:layout_constraintVertical_bias="0.017"
+            android:maxLines="2"
+            
+            android:scrollHorizontally="true"
+            android:ellipsize="end"/>
 
         <ImageView
             android:id="@+id/item_image"
             android:layout_width="126dp"
             android:layout_height="126dp"
+            android:layout_marginTop="10dp"
             android:contentDescription="Item Image"
-            tools:layout_editor_absoluteX="6dp"
-            tools:layout_editor_absoluteY="10dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.059"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.042" />
+
+        <TextView
+            android:id="@+id/item_price"
+            android:layout_width="117dp"
+            android:layout_height="29dp"
+            android:layout_marginStart="62dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/item_image"
+            app:layout_constraintTop_toBottomOf="@+id/item_description"
+            app:layout_constraintVertical_bias="0.026" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="126dp"
+            android:layout_height="61dp"
+            android:text="Add To Cart"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/item_price"
+            app:layout_constraintHorizontal_bias="0.118"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/item_image"
+            app:layout_constraintVertical_bias="0.014" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
