--- a/Clientandroid/app/src/main/res/layout/item.xml
+++ b/Clientandroid/app/src/main/res/layout/item.xml
@@ -39,8 +39,8 @@
 
             <TextView
                 android:id="@+id/item_title"
-                android:layout_width="155dp"
-                android:layout_height="61dp"
+                android:layout_width="169dp"
+                android:layout_height="95dp"
                 android:layout_gravity="left"
                 android:layout_margin="3dp"
                 android:gravity="left"
@@ -48,20 +48,22 @@
                 android:paddingLeft="50px"
                 android:paddingEnd="10dp"
                 android:textColor="@color/Xiketic"
-                android:textSize="24sp"
+                android:ellipsize="end"
+                android:maxLines="3"
+                android:textSize="15dp"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.698"
+                app:layout_constraintHorizontal_bias="0.512"
                 app:layout_constraintStart_toEndOf="@+id/item_image"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.145"
+                app:layout_constraintVertical_bias="0.125"
                 tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/item_description"
-                android:layout_width="166dp"
-                android:layout_height="79dp"
+                android:layout_width="159dp"
+                android:layout_height="50dp"
                 android:layout_margin="3dp"
                 android:ellipsize="end"
                 android:maxLines="2"
@@ -75,36 +77,36 @@
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.983"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintHorizontal_bias="0.408"
+                app:layout_constraintStart_toEndOf="@+id/item_image"
                 app:layout_constraintTop_toBottomOf="@+id/item_title"
-                app:layout_constraintVertical_bias="0.031" />
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/item_price"
                 android:layout_width="117dp"
                 android:layout_height="29dp"
                 android:textColor="@color/RussianViolet"
-                android:textSize="20sp"
+                android:textSize="22dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.763"
+                app:layout_constraintHorizontal_bias="0.969"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/item_description"
-                app:layout_constraintVertical_bias="0.044" />
+                app:layout_constraintVertical_bias="0.028" />
 
             <Button
                 android:id="@+id/button"
-                android:layout_width="126dp"
-                android:layout_height="61dp"
+                android:layout_width="108dp"
+                android:layout_height="56dp"
+                android:layout_marginStart="16dp"
                 android:backgroundTint="@color/BlueSapphire"
                 android:text="Add To Cart"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.142"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/item_image"
-                app:layout_constraintVertical_bias="0.062" />
+                app:layout_constraintVertical_bias="0.021" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
