--- a/Clientandroid/app/src/main/res/layout/pop_up_product.xml
+++ b/Clientandroid/app/src/main/res/layout/pop_up_product.xml
@@ -11,11 +11,26 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/pop_up_title"
+            android:layout_width="367dp"
+            android:layout_height="86dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="32dp"
+            android:textAlignment="center"
+            android:textColor="@color/Xiketic"
+            android:textSize="22sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
             android:id="@+id/pop_up_price"
             android:layout_width="112dp"
             android:layout_height="34dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="28dp"
+            android:textColor="@color/RussianViolet"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.344"
@@ -29,21 +44,9 @@
             android:layout_marginStart="28dp"
             android:layout_marginTop="12dp"
             android:text="Category"
+            android:textColor="@color/Xiketic"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/pop_up_image" />
-
-        <TextView
-            android:id="@+id/pop_up_title"
-            android:layout_width="367dp"
-            android:layout_height="86dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="32dp"
-            android:textAlignment="center"
-            android:textSize="22sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/pop_up_image"
@@ -54,9 +57,39 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/pop_up_title" />
 
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/BlueSapphire"
+            android:text="Add to Cart"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.079"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pop_up_category"
+            app:layout_constraintVertical_bias="0.094" />
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            android:layout_width="238dp"
+            android:layout_height="67dp"
+            android:numStars="5"
+            android:rating="5"
+            android:scrollbarSize="5dp"
+            android:scrollbarStyle="insideOverlay"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.085"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button2"
+            app:layout_constraintVertical_bias="0.061" />
+
         <ScrollView
-            android:layout_width="180dp"
-            android:layout_height="93dp"
+            android:id="@+id/scrollView2"
+            android:layout_width="177dp"
+            android:layout_height="149dp"
             android:layout_marginBottom="316dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -64,17 +97,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/pop_up_price">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/pop_up_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/pop_up_description"
-                    android:layout_width="371dp"
-                    android:layout_height="87dp"
-                    android:layout_weight="1" />
-            </LinearLayout>
+                android:layout_weight="1"
+                android:textColor="@color/Xiketic" />
         </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
