--- a/Clientandroid/app/src/main/res/layout/item.xml
+++ b/Clientandroid/app/src/main/res/layout/item.xml
@@ -96,7 +96,7 @@
                 app:layout_constraintVertical_bias="0.028" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/item_button"
                 android:layout_width="108dp"
                 android:layout_height="56dp"
                 android:layout_marginStart="16dp"
