--- a/Clientandroid/app/src/main/res/layout/activity_main.xml
+++ b/Clientandroid/app/src/main/res/layout/activity_main.xml
@@ -11,14 +11,14 @@
         android:id="@+id/main_button_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="60dp"
+        android:layout_marginEnd="56dp"
         android:backgroundTint="@color/BlueSapphire"
         android:text="@string/main_button_1_text"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_button_3"
-        app:layout_constraintVertical_bias="0.238" />
+        app:layout_constraintVertical_bias="0.695" />
 
     <Button
         android:id="@+id/main_button_2"
@@ -29,10 +29,10 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/main_button_1"
-        app:layout_constraintHorizontal_bias="0.562"
+        app:layout_constraintHorizontal_bias="0.301"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_button_3"
-        app:layout_constraintVertical_bias="0.236" />
+        app:layout_constraintVertical_bias="0.695" />
 
     <Button
         android:id="@+id/main_button_3"
@@ -43,10 +43,10 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.254"
+        app:layout_constraintHorizontal_bias="0.068"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.212" />
+        app:layout_constraintVertical_bias="0.651" />
 
     <Button
         android:id="@+id/main_button_4"
@@ -64,8 +64,8 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="359dp"
+        android:layout_height="293dp"
         android:contentDescription="@string/full_energy_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,5 +74,30 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.445"
         app:srcCompat="@drawable/full_energy_logo" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:text="Powered By:"
+        android:textColor="@color/RussianViolet"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Salma Djadi, Mario Rubio,\n Cristian Romero"
+        android:textAlignment="center"
+        android:textColor="@color/RussianViolet"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.325" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
